--- a/manager/media/style/RevoStyle/style.css
+++ b/manager/media/style/RevoStyle/style.css
@@ -22,6 +22,10 @@ html, body, form, fieldset {
     --color-accent-green-hover-end: #2d879b;
     --color-accent-green-active-start: #1f5a68;
     --color-accent-green-active-end: #154954;
+    --color-accent-green-muted-start: #a7d5de;
+    --color-accent-green-muted-end: #6eaab4;
+    --color-accent-green-muted-border: #97c0c8;
+    --color-accent-green-muted-text: #0f444d;
     --color-neutral-button-start: #f1f4f6;
     --color-neutral-button-hover-end: #e6ecef;
     --color-neutral-button-active-start: #dbe3e7;
@@ -1310,7 +1314,7 @@ a.hometblink:hover {
 }
 
 .dynamic-tab-pane-control .tab-row .tab {
-    color: #313131;
+    color: var(--color-accent-green-muted-text);
     font-size: 1em;
     cursor: pointer;
     display: inline;
@@ -1320,10 +1324,10 @@ a.hometblink:hover {
     z-index: 1;
     position: relative;
     top: 1px;
-    border: 1px solid #658f1a;
-    text-shadow: 0px -1px 0px #2B5F0C;
+    border: 1px solid var(--color-accent-green-muted-border);
+    text-shadow: none;
     border-radius: 5px 5px 0 0;
-    background-image: linear-gradient(var(--color-accent-green-start), var(--color-accent-green-end));
+    background-image: linear-gradient(var(--color-accent-green-muted-start), var(--color-accent-green-muted-end));
 }
 
 .rtl .dynamic-tab-pane-control .tab-row .tab {
@@ -1357,7 +1361,7 @@ a.hometblink:hover {
 }
 
 .dynamic-tab-pane-control .tab-row .tab span {
-    color: #fff;
+    color: inherit;
     text-decoration: none;
 }
 
